--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "processmaker/pmql",
+    "name": "nolanpro/pmql",
     "version": "1.5.0",
     "description": "An Eloquent trait that provides the pmql scope to allow converting simple sql criteria clauses to Eloquent",
     "type": "project",
